welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:2: error: missing arguments for method == in class Object;
follow this method with `_' if you want to treat it as a partially applied function
	if (a% == b% ) true else false
               ^